en/docs/api-manager/4.0.0/reference/product-apis/overview.md
# RESTful APIs

The following topics list the APIs exposed from the API Publisher, Developer Portal, Admin Portal and Gateway, which you can use to create and manage APIs. You can consume APIs directly through their UIs or, an external REST client like cURL.

There are two versions of REST APIs available for the Admin Portal.
<br>
<table>
  <tr>
    <td nowrap="true"><a href="publisher-apis/publisher-v2/publisher-v2.md">WSO2 Publisher v2</a></td>
    <td rowspan="4" style="vertical-align : middle"><b>WSO2 recommends that you use the v2 REST APIs</b> as it is up to date and has support for the latest WSO2 API Manager 4.0.0 features with regard to the Publisher, Developer Portal, and Admin Portal.
    </td>
  </tr>
  <tr>
    <td nowrap="true"><a href="devportal-apis/devportal-v2/devportal-v2.md">WSO2 Developer Portal v2</a></td>
  </tr>
   <tr>
    <td nowrap="true"><a href="admin-apis/admin-v2/admin-v2.md">WSO2 Admin Portal v2</a></td>
  </tr>
  <tr>
    <td nowrap="true"><a href="gateway-apis/gateway-v1/gateway-v1.md">WSO2 Gateway API v1</a></td>
  </tr>
  <tr>
    <td nowrap="true"><a href="service-catalog-apis/service-catalog-v1/service-catalog-v1.md">WSO2 Service Catalog API v1</a></td>
  </tr>
  
</table>

## Quick Start

Following Postman collection provides quick start guide for WSO2 API Manager REST APIs. It can be used to,
 
 * Create, publish, subscribe and invoke a sample REST API
 * Create, subscribe and invoke a sample API Product 

[![Run in Postman](https://run.pstmn.io/button.svg)](https://god.gw.postman.com/run-collection/17491134-0dda02a9-52e9-43bd-aefe-4bd3095d5516?)
